# mouthwash

./: .gitignore  CMakeLists.txt  Makefile  README.md  gen_python_proto_stubs.sh  gen_web_proto_stubs.sh
docs/: Doxyfile
protos/: bottle.proto  health.proto  mix.proto
python/: create_test_midi.py  health_pb2.py  health_pb2_grpc.py  mix_pb2.py  mix_pb2_grpc.py  mix_server.py
src/: bar.cc  bar.hh  bar_helper.cc  bar_helper.hh  bartender.cc  bartender.hh  bottle_server.cc  bottle_server.cc.bak  bottle_server.h.bak  bottle_server.hh  ingredient.cc  ingredient.hh  main.cc  main.cc.bak  mixer_client.cc  mixer_client.hh  recipe.cc  recipe.hh  transport.hh
test/: all_chords.mid  cpp_grpc_test.js  cpp_grpc_test.sh  python_grpc_test.js  python_grpc_test.sh
test/emscripten-wasm-check/: emscripten_test.c  hello.wasm
test/go-wasm-check/: index.html  libwasmcheck.wasm  server.go  wasm_check.go
web/: .babelrc  .eslintrc  package.json  run_mouthwash_envoy.sh  webpack.config.js
web/envoy-docker/: Dockerfile  envoy.yaml
web/src/: BarContainer.js  BarContext.js  barClient.js  barDb.js  bottleClient.js  bottle_grpc_web_pb.js  bottle_pb.js  health_grpc_web_pb.js  index.html  index.js  useBottleClient.js
